Fixed some display layout problem

--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,11 @@ body {
     left: 6.5%;
 }
 #board {
-
     width: 575px;
     height: 575px;
     border: 2px solid #000000;
     position: relative;
-    top: 150px;
-    left: 400px;
+    margin: 3% auto 0 auto;
     background-image: url(./wood-background.png);
     background-size: 100%;
     background-position: center center;
@@ -45,9 +43,6 @@ body {
 }
 
 .button {
-    left: 650px;
-    top: 80px;
-    position: absolute;
     font-weight: bold;
     background-color:burlywood;
     height: 40px;
@@ -61,4 +56,10 @@ body {
 .button:hover {
 
     background-color: cadetblue;
+}
+.btn-div {
+    margin-top: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
